[tool.poetry]
name = "annie"
version = "0.1.0"
description = ""
authors = ["lyie <moch.rene@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
tabulate = "^0.8.9"
cachetools = "^4.2.2"
mypy = "^0.812"
SQLAlchemy = "^1.4.17"
psycopg2-binary = "^2.8.6"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
